--- a/static/css/add.css
+++ b/static/css/add.css
@@ -1,10 +1,48 @@
+a, a:hover{
+	text-decoration: none;
+}
 .content-head{
+	height: 50px;
+	border-bottom: 2px solid #F0F0F0;
+}
+.content-head input{
+	height: 48px;
+	padding-left: 20px;
+	font-size: 20px;
+	font-weight: 100;
+	color: #888888;
+	border: 0;
+	outline: none;
+	width: 100%;
+}
+.content-tag{
+	height: 49px;
+	padding-left: 20px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
-.content-head .form-control{
-	width: 80%;
+textarea{
+	resize: none;
+	outline: none;
+}
+.editor-toolbar{
+	border-radius: 0;
+	border: 0;
+	border-top: 2px solid #F0F0F0;
+	border-bottom: 2px solid #F0F0F0;
+	border-right: 2px solid #F0F0F0;
+}
+.CodeMirror{
+	height: 1000px;
+	border-radius: 0;
+	border: 0;
+	border-bottom: 2px solid #F0F0F0;
+	border-right: 2px solid #F0F0F0;
+	
+}
+.active-content{
+	background: rgba(66,185,131,0.1);
 }
 /*发布文章页面*/
 .smallTips{
@@ -29,10 +67,6 @@
 }
 .smallTips div:hover{
 	background: #CCCCCC;
-}
-textarea{
-	resize: none;
-	outline: none;
 }
 #upload input[type=button]{
 	width: 100%;
