--- a/views/add.html
+++ b/views/add.html
@@ -1,160 +1,190 @@
-{% extends "article-layout.html" %} {% block main %}
-<link rel="stylesheet" type="text/css" href="../static/css/fileinput.css" />
+{% extends "article-layout.html" %} {% block list %}
+<div class="list-head">
+	<div>
+		<i class="fa fa-list"></i>&nbsp;&nbsp;文章列表
+	</div>
+	<div>
+		<a href="/postedit" style="color: #C0C0C0;"><i class="fa fa-plus"></i></a>
+	</div>
+</div>
+<ul>
+	{% for content in contents %}
+	<a href="/postedit?contentid={{content.id.toString()}}">
+		<li style="border-bottom: 1px solid #F0F0F0; overflow-x: hidden;" id="{{content._id.toString()}}">
+			<h4 style="color: #42B983; margin: 0;">
+				{% if content.isPublic == false %}
+				<small style="color: red;">[草稿]</small>
+				{% endif %}
+				{{content.title}}
+			</h4>
+			<p style="margin: 0; color: #D5D5D5;">{{content.date}}</p>
+		</li>
+	</a>
+	{% endfor %}
+</ul>
+{% endblock %} {% block main %}
+<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="../static/css/font-awesome/css/font-awesome.css" />
 <link rel="stylesheet" type="text/css" href="../static/css/custom_up_img.css" />
 <link rel="stylesheet" type="text/css" href="../static/css/sweetalert.css" />
-<link rel="stylesheet" type="text/css" href="../static/css/add.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+<link rel="stylesheet" type="text/css" href="../static/css/add.css" />
 <script src="../static/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script src="../static/js/fileinput.js" type="text/javascript" charset="utf-8"></script>
 <script src="../static/js/custom_up_img.js" type="text/javascript" charset="utf-8"></script>
 <script src="../static/js/cropper.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../static/js/zh.js" type="text/javascript" charset="utf-8"></script>
 <script src="../static/js/sweetalert-dev.js" type="text/javascript" charset="utf-8"></script>
-<div class="container" style="margin-top: 15px;">
-	<div class="row">
+<div class="container-view">
+	<div class="row-view">
 		<form method="post">
 			<div class="content-head">
-				<span>标题</span>
-				<input type="text" name="title" class="form-control" />
-				<button type="submit" class="btn" style="background: #42B983; color: #FFF;">发布</button>
+				<input type="text" name="title" placeholder="新建文章" value="{{content.title}}" />
 			</div>
-			<span style="line-height: 30px;">内容摘要</span><br>
-			<textarea id="description" class="form-control" rows="3" name="description"></textarea>
-			<br>
-			<span style="line-height: 20px;">文章正文</span><br>
-			<textarea id="article-content" class="form-control" rows="20" name="content"></textarea>
+			<div class="content-tag">
+				<div class="myTags">
+					<i class="fa fa-tags"></i>
+					<a href="" style="color: #42B983;"><i class="fa fa-plus"></i></a>
+				</div>
+				<div class="submitBtn">
+					{% if content %}
+					<input id="deleteArticle" class="btn btn-default" style="width: 82px;" value="删除文章">
+					<input id="saveArticle" class="btn" style="background: #42B983; color: #FFF;width: 82px;" value="保存修改"/>
+					{% if content.isPublic != true %}
+					<input id="postDraft" class="btn btn-default" style="background: #42B983; color: #FFF;width: 82px;" value="发布文章" />
+					{% endif %} 
+					{% else %}
+					<input id="saveDraft" class="btn btn-default" style="width: 82px;" value="保存草稿">
+					<button type="submit" class="btn" style="background: #42B983; color: #FFF;">发布文章</button> 
+					{% endif %}
+				</div>
+			</div>
+			<textarea id="article-content" name="content">{{content.content}}</textarea>
 			<br />
 			<input type="hidden" name="coverImage" id="coverImage" value="" />
 		</form>
-		<span>封面图(<small>可以不上传</small>)：</span>
-		<input type="file" name="file" id="cover" required="required" />
-		<br />
-		<input type="button" name="uploadImage" id="coverBtn" value="上传" class="btn btn-default" />
-		<p>1、图片大小不能超过2M，2、支持格式：.jpg .png .bmp</p>
-	</div>
-	<!--上传图片-->
-	<div class="modal fade" id="uploadImg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-					<h4 class="modal-title" id="myModalLabel">插入图片</h4>
-				</div>
-				<div class="modal-body">
-					<div id="myTabContent" class="tab-content">
-						<div class="tab-pane fade in active" id="upload">
-							<br />
-							<input type="file" name="file" id="file" required="required" />
-							<br />
-							<input type="button" name="uploadImage" id="uploadImage" value="上传" class="btn btn-mybtn" />
-							<p>1、图片大小不能超过2M，2、支持格式：.jpg .png .bmp</p>
-							<p>图片链接：<small style="color: #42B983;">(上传成功后请复制当前图片链接进行添加)</small></p>
-							<input type="text" name="online" id="online" class="form-control"/>
-							<br />
-							<div id="successTip">
-								<i class="fa fa-check"></i>上传成功
-							</div>
-						</div>
-					</div>
-
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-					<button type="button" class="btn btn-mybtn" id="insertImg" data-dismiss="modal" style="background: #42B983; color: #FFF;">确定</button>
-				</div>
-			</div>
-			<!-- /.modal-content -->
-		</div>
-		<!-- /.modal-dialog -->
 	</div>
 </div>
 </div>
 <script type="text/javascript">
+	$('.con-list').eq(0).addClass('con-list-active');
+	$(function(){
+		getActive();
+	})
+//	getActive();
+	function getActive(){
+		var contentid = GetQueryString('contentid');
+		console.log(contentid);
+		$(`#${contentid}`).addClass('active-content');
+	}
 	var simplemde = new SimpleMDE({
 		element: document.getElementById('article-content'),
 		placeholder: '输入正文...'
 	});
-	$('.fa-picture-o').attr('data-toggle', 'modal');
-	$('.fa-picture-o').attr('data-target', '#uploadImg');
-	$("#file").fileinput({
-		language: 'zh',
-		'theme': 'explorer',
-		'uploadUrl': '#',
-		showUpload: false, //是否显示上传按钮
-		showRemove: false,
-		overwriteInitial: false,
-		dropZoneEnabled: false, //是否显示拖拽区域
-		browseClass: "btn btn-default", //按钮样式  
-		allowedFileExtensions: ['jpg', 'png', 'bmp']
-	});
-	$("#cover").fileinput({
-		language: 'zh',
-		'theme': 'explorer',
-		'uploadUrl': '#',
-		showUpload: false, //是否显示上传按钮
-		showRemove: false,
-		overwriteInitial: false,
-		dropZoneEnabled: false, //是否显示拖拽区域
-		browseClass: "btn btn-default", //按钮样式  
-		allowedFileExtensions: ['jpg', 'png', 'bmp']
-	});
-	$('#coverBtn').click(function() {
-		var img = $('#cover').get(0).files[0];
-		if(!/image\/\w+/.test(img.type)) {
-			alert("请确保文件为图像类型");
-			return false;
+	// save draft
+	$('#saveDraft').click(function() {
+		var title = $('input[name=title]').val();
+		var content = simplemde.value();
+		if(title == '') {
+			title = '新建文章';
 		}
-		var reader = new FileReader();
-		reader.onload = function(e) {
-			//			console.log(e.target.result);
-			$.ajax({
-				type: "post",
-				url: "/uploadImage",
-				data: {
-					type: 'coverimg',
-					data: e.target.result.toString()
-				},
-				dataType: 'json',
-				success: function(data) {
-					if(data.result == 'ok') {
-						alert('上传成功');
-						$('#coverImage').val(data.image);
-					}
-				}
-			});
-		}
-		reader.readAsDataURL(img);
+		$.ajax({
+			type: "post",
+			url: "/saveDraft",
+			data: {
+				title: title,
+				content: content
+			},
+			dataType: 'json',
+			success: function(data) {
+				console.log(data);
+				var res = eval(data);
+				location.href = `/postedit?contentid=${res.newContent._id.toString()}`;
+			}
+		});
 	});
-	$('#uploadImage').click(function() {
-		var img = $('#file').get(0).files[0];
-		//					console.log(img);
-		if(!/image\/\w+/.test(img.type)) {
-			alert("请确保文件为图像类型");
-			return false;
-		}
-		var reader = new FileReader();
-		reader.onload = function(e) {
-			//						console.log(e.target.result);
-			$.ajax({
-				type: "post",
-				url: "/uploadImage",
-				data: {
-					type: 'contentimg',
-					data: e.target.result.toString()
-				},
-				dataType: 'json',
-				success: function(data) {
-					console.log(data);
-					if(data.result == 'ok') {
-						$('#online').val(data.image);
-						$('#successTip').show();
-					}
-				}
-			});
-		}
-		reader.readAsDataURL(img);
+	// delete article
+	$('#deleteArticle').click(function() {
+		var id = GetQueryString('contentid');
+		console.log(id);
+		$.ajax({
+			type: "post",
+			url: "/deleteArticle",
+			data: {
+				contentid: id
+			},
+			dataType: 'json',
+			success: function(data) {
+				console.log(data);
+				location.href = `/postedit`;
+			}
+		});
 	});
+	// save article
+	$('#saveArticle').click(function() {
+		var id = GetQueryString('contentid');
+		console.log(id);
+		$.ajax({
+			type: "post",
+			url: "/saveArticle",
+			data: {
+				contentid: id,
+				title:$('input[name=title]').val(),
+				content:simplemde.value()
+			},
+			dataType: 'json',
+			success: function(data) {
+				console.log(data);
+				location.href = `/postedit?contentid=${id}`;
+			}
+		});
+	});
+	// post draft
+	$('#postDraft').click(function() {
+		var id = GetQueryString('contentid');
+		console.log(id);
+		$.ajax({
+			type: "post",
+			url: "/postDraft",
+			data: {
+				contentid: id,
+				title:$('input[name=title]').val(),
+				content:simplemde.value()
+			},
+			dataType: 'json',
+			success: function(data) {
+				console.log(data);
+				location.href = `/postedit?contentid=${id}`;
+			}
+		});
+	});
+	
+	
+	//	$('#coverBtn').click(function() {
+	//		var img = $('#cover').get(0).files[0];
+	//		if(!/image\/\w+/.test(img.type)) {
+	//			alert("请确保文件为图像类型");
+	//			return false;
+	//		}
+	//		var reader = new FileReader();
+	//		reader.onload = function(e) {
+	//			//			console.log(e.target.result);
+	//			$.ajax({
+	//				type: "post",
+	//				url: "/uploadImage",
+	//				data: {
+	//					type: 'coverimg',
+	//					data: e.target.result.toString()
+	//				},
+	//				dataType: 'json',
+	//				success: function(data) {
+	//					if(data.result == 'ok') {
+	//						alert('上传成功');
+	//						$('#coverImage').val(data.image);
+	//					}
+	//				}
+	//			});
+	//		}
+	//		reader.readAsDataURL(img);
+	//	});
 </script>
 {% endblock %}
