--- a/views/base.html
+++ b/views/base.html
@@ -12,6 +12,7 @@
 		<script src="http://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/static/js/bootstrap.js"></script>
 		<script src="../static/js/uikit.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../static/js/jquery.dotdotdot.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 
 	<body>
