--- a/views/base.html
+++ b/views/base.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="description" content="">
 		<title>{{ title }}</title>
+		<link rel="stylesheet" type="text/css" href="../static/css/font-awesome/css/font-awesome.css"/>
 		<link rel="stylesheet" href="/static/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="../static/css/default.css" />
 		<!--<link rel="stylesheet" type="text/css" href="../static/css/monokai-sublime.css"/>-->
@@ -36,16 +37,28 @@
 				<div>
 					<ul id="ul-navbar" class="uk-navbar-nav uk-hidden-small">
 						<li class="articles">
-							<a href="/">文章</a>
+							<a href="/">
+								<!--文章-->
+								Articles
+							</a>
 						</li>
 						<li class="tag">
-							<a href="/tag">标签</a>
+							<a href="/tag">
+								<!--标签-->
+								Tag
+							</a>
 						</li>
 						<li class="comment">
-							<a href="/comment">留言</a>
+							<a href="/comment">
+								<!--留言-->
+								Comments
+							</a>
 						</li>
 						<li class="me">
-							<a href="/me">关于我</a>
+							<a href="/me">
+								<!--关于我-->
+								Me
+							</a>
 						</li>
 					</ul>
 					<ul class="uk-navbar-nav uk-visible-small">
@@ -54,16 +67,28 @@
 							<div class="uk-dropdown uk-dropdown-navbar uk-border-rounded">
 								<ul class="uk-nav uk-nav-navbar">
 									<li class="articles">
-										<a href="/">文章</a>
+										<a href="/">
+											<!--文章-->
+											Articles
+										</a>
 									</li>
 									<li class="tag">
-										<a href="/tag">标签</a>
+										<a href="/tag">
+											<!--标签-->
+											Tag
+										</a>
 									</li>
 									<li class="comment">
-										<a href="/comment">留言</a>
+										<a href="/comment">
+											<!--留言-->
+											Comments
+										</a>
 									</li>
 									<li class="me">
-										<a href="/me">关于我</a>
+										<a href="/me">
+											<!--关于我-->
+											Me
+										</a>
 									</li>
 								</ul>
 							</div>
