--- a/views/me.html
+++ b/views/me.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}{% block main %}
-<div class="me-view" style="padding: 20px;">
+<div class="me-view" style="padding: 20px;width: 1200px;margin: 0 auto;">
 	<h2>About me...</h2>
 	<hr />
 	<ul>
