--- a/static/css/comment.css
+++ b/static/css/comment.css
@@ -1,3 +1,99 @@
-.me-view{
+li{
+	list-style: none;
+}
+input{
+	outline: none;
+}
+.comment-view{
 	padding: 20px;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.comment-list{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+.comment-info{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.comment-detail{
+	font-size: 15px;
+}
+.comment-reply{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.myreply{
+	align-self: flex-end;
+	cursor: pointer;
+}
+.comment-add{
+	text-align: center;
+	height: 168px;
+}
+.comment-add:hover{
+	cursor: pointer;
+}
+.comment-add img{
+	width: 100px;
+	height: 100px;
+	margin-top: 34px;
+	margin-bottom: 34px;
+}
+.comment-list >li{
+	padding: 15px;
+	width: 300px;
+	border: 1px solid #42B983;
+	border-radius: 10px;
+	margin-right: 15px;
+	margin-bottom: 25px;
+}
+.comment-list >li::before{
+	content: '';
+	position: absolute;
+	width: 270px;
+	height: 20px;
+	margin-top: -25px;
+	border-left: 10px solid #42B983;
+	border-right: 10px solid #42B983;
+}
+.add-view{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: 100;
+	background: rgba(0,0,0,0.2);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.add-comment{
+	width: 500px;
+	height: 500px;
+	background: #FFF;
+	margin: 0 auto;
+	border: 1px solid #42B983;
+	border-radius: 10px;
+	padding: 20px;
+}
+.add-comment::before{
+	content: '';
+	position: absolute;
+	width: 460px;
+	height: 20px;
+	margin-top: -25px;
+	border-left: 10px solid #42B983;
+	border-right: 10px solid #42B983;
+}
+.add-comment input, .add-comment textarea{
+	width: 100%;
+	margin-bottom: 20px;
+	resize: none;
 }
