--- a/static/css/add.css
+++ b/static/css/add.css
@@ -80,3 +80,22 @@ textarea{
 	background: #42B983;
 	color: #FFF;
 }
+.showTags, .content-tags{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-top: 10px;
+}
+.mytag{
+	border: 1px solid #42B983;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-radius: 5px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
+.mytag i{
+	cursor: pointer;
+	color: #42B983;
+}
