--- a/views/article-layout.html
+++ b/views/article-layout.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="../static/css/uikit.min.css" />
 		<link rel="stylesheet" type="text/css" href="../static/css/postlist.css" />
 		<script src="http://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../static/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../static/js/fileinput.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../static/js/zh.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../static/js/bootstrap.js"></script>
